SUBDIRS = . sample

SUFFIXES = .idl

vpath %.idl = $(srcdir)/../dom

if NACL
esidl=esidl
else
esidl=../esidl
endif

idl_files = \
	2dcontext.idl \
	console.idl \
	cssom.idl \
	cssomview.idl \
	dom2css.idl \
	dom2ranges.idl \
	dom2traversal.idl \
	dom2views.idl \
	dom3core.idl \
	dom3events.idl \
	dom3ls.idl \
	dom3validation.idl \
	dom3xpath.idl \
	eventsource.idl \
	elementtraversal.idl \
	file.idl \
	geolocation.idl \
	html5.idl \
	indexeddb.idl \
	microdata.idl \
	postmsg.idl \
	progress-events.idl \
	selectors.idl \
	smil.idl \
	svg.idl \
	webdatabase.idl \
	webgl.idl \
	webnotifications.idl \
	webstorage.idl \
	websocket.idl \
	workers.idl \
	xhr2.idl

generated_headers = \
	com/getfirebug/Console.h \
	org/w3c/dom/AnonXMLHttpRequest_Constructor.h \
	org/w3c/dom/AnonXMLHttpRequest.h \
	org/w3c/dom/Attr.h \
	org/w3c/dom/CaretPosition.h \
	org/w3c/dom/CDATASection.h \
	org/w3c/dom/CharacterData.h \
	org/w3c/dom/Comment.h \
	org/w3c/dom/css/Counter.h \
	org/w3c/dom/css/CSS2Properties.h \
	org/w3c/dom/css/CSSCharsetRule.h \
	org/w3c/dom/css/CSSColorComponentValue.h \
	org/w3c/dom/css/CSSComponentValue.h \
	org/w3c/dom/css/CSSFontFaceRule.h \
	org/w3c/dom/css/CSSImportRule.h \
	org/w3c/dom/css/CSSLengthComponentValue.h \
	org/w3c/dom/css/CSSMapValue.h \
	org/w3c/dom/css/CSSMediaRule.h \
	org/w3c/dom/css/CSSNamespaceRule.h \
	org/w3c/dom/css/CSSPageRule.h \
	org/w3c/dom/css/CSSPercentageComponentValue.h \
	org/w3c/dom/css/CSSPrimitiveValue.h \
	org/w3c/dom/css/CSSPropertyValueList.h \
	org/w3c/dom/css/CSSRule.h \
	org/w3c/dom/css/CSSStyleDeclaration.h \
	org/w3c/dom/css/CSSStyleDeclarationValue.h \
	org/w3c/dom/css/CSSStyleRule.h \
	org/w3c/dom/css/CSSStyleSheet.h \
	org/w3c/dom/css/CSSUnknownRule.h \
	org/w3c/dom/css/CSSURLComponentValue.h \
	org/w3c/dom/css/CSSValue.h \
	org/w3c/dom/css/CSSValueList.h \
	org/w3c/dom/css/DocumentCSS.h \
	org/w3c/dom/css/DOMImplementationCSS.h \
	org/w3c/dom/css/ElementCSSInlineStyle.h \
	org/w3c/dom/css/Rect.h \
	org/w3c/dom/css/RGBColor.h \
	org/w3c/dom/css/ViewCSS.h \
	org/w3c/dom/DocumentFragment.h \
	org/w3c/dom/Document.h \
	org/w3c/dom/DocumentType.h \
	org/w3c/dom/DOMConfiguration.h \
	org/w3c/dom/DOMError.h \
	org/w3c/dom/DOMErrorHandler.h \
	org/w3c/dom/DOMException.h \
	org/w3c/dom/DOMImplementation.h \
	org/w3c/dom/DOMImplementationList.h \
	org/w3c/dom/DOMImplementationSource.h \
	org/w3c/dom/DOMLocator.h \
	org/w3c/dom/DOMStringList.h \
	org/w3c/dom/Element.h \
	org/w3c/dom/Entity.h \
	org/w3c/dom/EntityReference.h \
	org/w3c/dom/events/CompositionEvent.h \
	org/w3c/dom/events/CustomEvent.h \
	org/w3c/dom/events/DocumentEvent.h \
	org/w3c/dom/events/EventException.h \
	org/w3c/dom/events/Event.h \
	org/w3c/dom/events/EventListener.h \
	org/w3c/dom/events/EventTarget.h \
	org/w3c/dom/events/FocusEvent.h \
	org/w3c/dom/events/KeyboardEvent.h \
	org/w3c/dom/events/MouseEvent.h \
	org/w3c/dom/events/MutationEvent.h \
	org/w3c/dom/events/MutationNameEvent.h \
	org/w3c/dom/eventsource/EventSource_Constructor.h \
	org/w3c/dom/eventsource/EventSource.h \
	org/w3c/dom/events/ProgressEvent.h \
	org/w3c/dom/events/TextEvent.h \
	org/w3c/dom/events/UIEvent.h \
	org/w3c/dom/events/WheelEvent.h \
	org/w3c/dom/file/Blob.h \
	org/w3c/dom/file/FileError.h \
	org/w3c/dom/file/FileException.h \
	org/w3c/dom/file/File.h \
	org/w3c/dom/file/FileReader_Constructor.h \
	org/w3c/dom/file/FileReader.h \
	org/w3c/dom/file/FileReaderSync_Constructor.h \
	org/w3c/dom/file/FileReaderSync.h \
	org/w3c/dom/FormData_Constructor.h \
	org/w3c/dom/FormData.h \
	org/w3c/dom/geolocation/Coordinates.h \
	org/w3c/dom/geolocation/Geolocation.h \
	org/w3c/dom/geolocation/NavigatorGeolocation.h \
	org/w3c/dom/geolocation/PositionCallback.h \
	org/w3c/dom/geolocation/PositionErrorCallback.h \
	org/w3c/dom/geolocation/PositionError.h \
	org/w3c/dom/geolocation/Position.h \
	org/w3c/dom/geolocation/PositionOptions.h \
	org/w3c/dom/html/ApplicationCache.h \
	org/w3c/dom/html/BarProp.h \
	org/w3c/dom/html/BeforeUnloadEvent.h \
	org/w3c/dom/html/BooleanCallback.h \
	org/w3c/dom/html/CanvasGradient.h \
	org/w3c/dom/html/CanvasPattern.h \
	org/w3c/dom/html/CanvasPixelArray.h \
	org/w3c/dom/html/CanvasRenderingContext2D.h \
	org/w3c/dom/html/DataTransfer.h \
	org/w3c/dom/html/DOMSettableTokenList.h \
	org/w3c/dom/html/DOMStringMap.h \
	org/w3c/dom/html/DOMTokenList.h \
	org/w3c/dom/html/DragEvent.h \
	org/w3c/dom/html/Function.h \
	org/w3c/dom/html/HashChangeEvent.h \
	org/w3c/dom/html/History.h \
	org/w3c/dom/html/HTMLAllCollection.h \
	org/w3c/dom/html/HTMLAnchorElement.h \
	org/w3c/dom/html/HTMLAppletElement.h \
	org/w3c/dom/html/HTMLAreaElement.h \
	org/w3c/dom/html/HTMLAudioElement_Constructor.h \
	org/w3c/dom/html/HTMLAudioElement.h \
	org/w3c/dom/html/HTMLBaseElement.h \
	org/w3c/dom/html/HTMLBaseFontElement.h \
	org/w3c/dom/html/HTMLBodyElement.h \
	org/w3c/dom/html/HTMLBRElement.h \
	org/w3c/dom/html/HTMLButtonElement.h \
	org/w3c/dom/html/HTMLCanvasElement.h \
	org/w3c/dom/html/HTMLCollection.h \
	org/w3c/dom/html/HTMLCommandElement.h \
	org/w3c/dom/html/HTMLDataListElement.h \
	org/w3c/dom/html/HTMLDetailsElement.h \
	org/w3c/dom/html/HTMLDirectoryElement.h \
	org/w3c/dom/html/HTMLDivElement.h \
	org/w3c/dom/html/HTMLDListElement.h \
	org/w3c/dom/html/HTMLDocument.h \
	org/w3c/dom/html/HTMLElement.h \
	org/w3c/dom/html/HTMLEmbedElement.h \
	org/w3c/dom/html/HTMLFieldSetElement.h \
	org/w3c/dom/html/HTMLFontElement.h \
	org/w3c/dom/html/HTMLFormControlsCollection.h \
	org/w3c/dom/html/HTMLFormElement.h \
	org/w3c/dom/html/HTMLFrameElement.h \
	org/w3c/dom/html/HTMLFrameSetElement.h \
	org/w3c/dom/html/HTMLHeadElement.h \
	org/w3c/dom/html/HTMLHeadingElement.h \
	org/w3c/dom/html/HTMLHRElement.h \
	org/w3c/dom/html/HTMLHtmlElement.h \
	org/w3c/dom/html/HTMLIFrameElement.h \
	org/w3c/dom/html/HTMLImageElement_Constructor.h \
	org/w3c/dom/html/HTMLImageElement.h \
	org/w3c/dom/html/HTMLInputElement.h \
	org/w3c/dom/html/HTMLKeygenElement.h \
	org/w3c/dom/html/HTMLLabelElement.h \
	org/w3c/dom/html/HTMLLegendElement.h \
	org/w3c/dom/html/HTMLLIElement.h \
	org/w3c/dom/html/HTMLLinkElement.h \
	org/w3c/dom/html/HTMLMapElement.h \
	org/w3c/dom/html/HTMLMarqueeElement.h \
	org/w3c/dom/html/HTMLMediaElement.h \
	org/w3c/dom/html/HTMLMenuElement.h \
	org/w3c/dom/html/HTMLMetaElement.h \
	org/w3c/dom/html/HTMLMeterElement.h \
	org/w3c/dom/html/HTMLModElement.h \
	org/w3c/dom/html/HTMLObjectElement.h \
	org/w3c/dom/html/HTMLOListElement.h \
	org/w3c/dom/html/HTMLOptGroupElement.h \
	org/w3c/dom/html/HTMLOptionElement_Constructor.h \
	org/w3c/dom/html/HTMLOptionElement.h \
	org/w3c/dom/html/HTMLOptionsCollection.h \
	org/w3c/dom/html/HTMLOutputElement.h \
	org/w3c/dom/html/HTMLParagraphElement.h \
	org/w3c/dom/html/HTMLParamElement.h \
	org/w3c/dom/html/HTMLPreElement.h \
	org/w3c/dom/html/HTMLProgressElement.h \
	org/w3c/dom/html/HTMLPropertiesCollection.h \
	org/w3c/dom/html/HTMLQuoteElement.h \
	org/w3c/dom/html/HTMLScriptElement.h \
	org/w3c/dom/html/HTMLSelectElement.h \
	org/w3c/dom/html/HTMLSourceElement.h \
	org/w3c/dom/html/HTMLSpanElement.h \
	org/w3c/dom/html/HTMLStyleElement.h \
	org/w3c/dom/html/HTMLTableCaptionElement.h \
	org/w3c/dom/html/HTMLTableCellElement.h \
	org/w3c/dom/html/HTMLTableColElement.h \
	org/w3c/dom/html/HTMLTableDataCellElement.h \
	org/w3c/dom/html/HTMLTableElement.h \
	org/w3c/dom/html/HTMLTableHeaderCellElement.h \
	org/w3c/dom/html/HTMLTableRowElement.h \
	org/w3c/dom/html/HTMLTableSectionElement.h \
	org/w3c/dom/html/HTMLTextAreaElement.h \
	org/w3c/dom/html/HTMLTimeElement.h \
	org/w3c/dom/html/HTMLTitleElement.h \
	org/w3c/dom/html/HTMLUListElement.h \
	org/w3c/dom/html/HTMLUnknownElement.h \
	org/w3c/dom/html/HTMLVideoElement.h \
	org/w3c/dom/html/ImageData.h \
	org/w3c/dom/html/Location.h \
	org/w3c/dom/html/MediaError.h \
	org/w3c/dom/html/MessageChannel_Constructor.h \
	org/w3c/dom/html/MessageChannel.h \
	org/w3c/dom/html/MessageEvent.h \
	org/w3c/dom/html/MessagePort.h \
	org/w3c/dom/html/Navigator.h \
	org/w3c/dom/html/PageTransitionEvent.h \
	org/w3c/dom/html/PopStateEvent.h \
	org/w3c/dom/html/PropertyNodeList.h \
	org/w3c/dom/html/RadioNodeList.h \
	org/w3c/dom/html/Screen.h \
	org/w3c/dom/html/Selection.h \
	org/w3c/dom/html/StyleMedia.h \
	org/w3c/dom/html/TextMetrics.h \
	org/w3c/dom/html/TimeRanges.h \
	org/w3c/dom/html/UndoManagerEvent.h \
	org/w3c/dom/html/UndoManager.h \
	org/w3c/dom/html/ValidityState.h \
	org/w3c/dom/html/Window.h \
	org/w3c/dom/indexeddb/IDBCursor.h \
	org/w3c/dom/indexeddb/IDBCursorSync.h \
	org/w3c/dom/indexeddb/IDBDatabase.h \
	org/w3c/dom/indexeddb/IDBDatabaseException.h \
	org/w3c/dom/indexeddb/IDBDatabaseSync.h \
	org/w3c/dom/indexeddb/IDBEnvironment.h \
	org/w3c/dom/indexeddb/IDBEnvironmentSync.h \
	org/w3c/dom/indexeddb/IDBErrorEvent.h \
	org/w3c/dom/indexeddb/IDBEvent.h \
	org/w3c/dom/indexeddb/IDBFactory.h \
	org/w3c/dom/indexeddb/IDBFactorySync.h \
	org/w3c/dom/indexeddb/IDBIndex.h \
	org/w3c/dom/indexeddb/IDBIndexSync.h \
	org/w3c/dom/indexeddb/IDBKeyRange.h \
	org/w3c/dom/indexeddb/IDBKeyRangeConstructors.h \
	org/w3c/dom/indexeddb/IDBObjectStore.h \
	org/w3c/dom/indexeddb/IDBObjectStoreSync.h \
	org/w3c/dom/indexeddb/IDBRequest.h \
	org/w3c/dom/indexeddb/IDBSuccessEvent.h \
	org/w3c/dom/indexeddb/IDBTransaction.h \
	org/w3c/dom/indexeddb/IDBTransactionEvent.h \
	org/w3c/dom/indexeddb/IDBTransactionSync.h \
	org/w3c/dom/indexeddb/IDBVersionChangeEvent.h \
	org/w3c/dom/indexeddb/IDBVersionChangeRequest.h \
	org/w3c/dom/ls/DOMImplementationLS.h \
	org/w3c/dom/ls/LSException.h \
	org/w3c/dom/ls/LSInput.h \
	org/w3c/dom/ls/LSLoadEvent.h \
	org/w3c/dom/ls/LSOutput.h \
	org/w3c/dom/ls/LSParserFilter.h \
	org/w3c/dom/ls/LSParser.h \
	org/w3c/dom/ls/LSProgressEvent.h \
	org/w3c/dom/ls/LSResourceResolver.h \
	org/w3c/dom/ls/LSSerializerFilter.h \
	org/w3c/dom/ls/LSSerializer.h \
	org/w3c/dom/NamedNodeMap.h \
	org/w3c/dom/NameList.h \
	org/w3c/dom/Node.h \
	org/w3c/dom/NodeList.h \
	org/w3c/dom/Notation.h \
	org/w3c/dom/ProcessingInstruction.h \
	org/w3c/dom/ranges/DocumentRange.h \
	org/w3c/dom/ranges/RangeException.h \
	org/w3c/dom/ranges/Range.h \
	org/w3c/dom/smil/ElementTimeControl.h \
	org/w3c/dom/smil/TimeEvent.h \
	org/w3c/dom/stylesheets/LinkStyle.h \
	org/w3c/dom/stylesheets/MediaList.h \
	org/w3c/dom/stylesheets/StyleSheet.h \
	org/w3c/dom/svg/GetSVGDocument.h \
	org/w3c/dom/svg/SVGAElement.h \
	org/w3c/dom/svg/SVGAltGlyphDefElement.h \
	org/w3c/dom/svg/SVGAltGlyphElement.h \
	org/w3c/dom/svg/SVGAltGlyphItemElement.h \
	org/w3c/dom/svg/SVGAngle.h \
	org/w3c/dom/svg/SVGAnimateColorElement.h \
	org/w3c/dom/svg/SVGAnimatedAngle.h \
	org/w3c/dom/svg/SVGAnimatedBoolean.h \
	org/w3c/dom/svg/SVGAnimatedEnumeration.h \
	org/w3c/dom/svg/SVGAnimatedInteger.h \
	org/w3c/dom/svg/SVGAnimatedLength.h \
	org/w3c/dom/svg/SVGAnimatedLengthList.h \
	org/w3c/dom/svg/SVGAnimatedNumber.h \
	org/w3c/dom/svg/SVGAnimatedNumberList.h \
	org/w3c/dom/svg/SVGAnimatedPathData.h \
	org/w3c/dom/svg/SVGAnimatedPoints.h \
	org/w3c/dom/svg/SVGAnimatedPreserveAspectRatio.h \
	org/w3c/dom/svg/SVGAnimatedRect.h \
	org/w3c/dom/svg/SVGAnimatedString.h \
	org/w3c/dom/svg/SVGAnimatedTransformList.h \
	org/w3c/dom/svg/SVGAnimateElement.h \
	org/w3c/dom/svg/SVGAnimateMotionElement.h \
	org/w3c/dom/svg/SVGAnimateTransformElement.h \
	org/w3c/dom/svg/SVGAnimationElement.h \
	org/w3c/dom/svg/SVGCircleElement.h \
	org/w3c/dom/svg/SVGClipPathElement.h \
	org/w3c/dom/svg/SVGColor.h \
	org/w3c/dom/svg/SVGColorProfileElement.h \
	org/w3c/dom/svg/SVGColorProfileRule.h \
	org/w3c/dom/svg/SVGComponentTransferFunctionElement.h \
	org/w3c/dom/svg/SVGCSSRule.h \
	org/w3c/dom/svg/SVGCursorElement.h \
	org/w3c/dom/svg/SVGDefinitionSrcElement.h \
	org/w3c/dom/svg/SVGDefsElement.h \
	org/w3c/dom/svg/SVGDescElement.h \
	org/w3c/dom/svg/SVGDocument.h \
	org/w3c/dom/svg/SVGElement.h \
	org/w3c/dom/svg/SVGElementInstance.h \
	org/w3c/dom/svg/SVGElementInstanceList.h \
	org/w3c/dom/svg/SVGEllipseElement.h \
	org/w3c/dom/svg/SVGEvent.h \
	org/w3c/dom/svg/SVGException.h \
	org/w3c/dom/svg/SVGExternalResourcesRequired.h \
	org/w3c/dom/svg/SVGFEBlendElement.h \
	org/w3c/dom/svg/SVGFEColorMatrixElement.h \
	org/w3c/dom/svg/SVGFEComponentTransferElement.h \
	org/w3c/dom/svg/SVGFECompositeElement.h \
	org/w3c/dom/svg/SVGFEConvolveMatrixElement.h \
	org/w3c/dom/svg/SVGFEDiffuseLightingElement.h \
	org/w3c/dom/svg/SVGFEDisplacementMapElement.h \
	org/w3c/dom/svg/SVGFEDistantLightElement.h \
	org/w3c/dom/svg/SVGFEFloodElement.h \
	org/w3c/dom/svg/SVGFEFuncAElement.h \
	org/w3c/dom/svg/SVGFEFuncBElement.h \
	org/w3c/dom/svg/SVGFEFuncGElement.h \
	org/w3c/dom/svg/SVGFEFuncRElement.h \
	org/w3c/dom/svg/SVGFEGaussianBlurElement.h \
	org/w3c/dom/svg/SVGFEImageElement.h \
	org/w3c/dom/svg/SVGFEMergeElement.h \
	org/w3c/dom/svg/SVGFEMergeNodeElement.h \
	org/w3c/dom/svg/SVGFEMorphologyElement.h \
	org/w3c/dom/svg/SVGFEOffsetElement.h \
	org/w3c/dom/svg/SVGFEPointLightElement.h \
	org/w3c/dom/svg/SVGFESpecularLightingElement.h \
	org/w3c/dom/svg/SVGFESpotLightElement.h \
	org/w3c/dom/svg/SVGFETileElement.h \
	org/w3c/dom/svg/SVGFETurbulenceElement.h \
	org/w3c/dom/svg/SVGFilterElement.h \
	org/w3c/dom/svg/SVGFilterPrimitiveStandardAttributes.h \
	org/w3c/dom/svg/SVGFitToViewBox.h \
	org/w3c/dom/svg/SVGFontElement.h \
	org/w3c/dom/svg/SVGFontFaceElement.h \
	org/w3c/dom/svg/SVGFontFaceFormatElement.h \
	org/w3c/dom/svg/SVGFontFaceNameElement.h \
	org/w3c/dom/svg/SVGFontFaceSrcElement.h \
	org/w3c/dom/svg/SVGFontFaceUriElement.h \
	org/w3c/dom/svg/SVGForeignObjectElement.h \
	org/w3c/dom/svg/SVGGElement.h \
	org/w3c/dom/svg/SVGGlyphElement.h \
	org/w3c/dom/svg/SVGGlyphRefElement.h \
	org/w3c/dom/svg/SVGGradientElement.h \
	org/w3c/dom/svg/SVGHKernElement.h \
	org/w3c/dom/svg/SVGICCColor.h \
	org/w3c/dom/svg/SVGImageElement.h \
	org/w3c/dom/svg/SVGLangSpace.h \
	org/w3c/dom/svg/SVGLength.h \
	org/w3c/dom/svg/SVGLengthList.h \
	org/w3c/dom/svg/SVGLinearGradientElement.h \
	org/w3c/dom/svg/SVGLineElement.h \
	org/w3c/dom/svg/SVGLocatable.h \
	org/w3c/dom/svg/SVGMarkerElement.h \
	org/w3c/dom/svg/SVGMaskElement.h \
	org/w3c/dom/svg/SVGMatrix.h \
	org/w3c/dom/svg/SVGMetadataElement.h \
	org/w3c/dom/svg/SVGMissingGlyphElement.h \
	org/w3c/dom/svg/SVGMPathElement.h \
	org/w3c/dom/svg/SVGNumber.h \
	org/w3c/dom/svg/SVGNumberList.h \
	org/w3c/dom/svg/SVGPaint.h \
	org/w3c/dom/svg/SVGPathElement.h \
	org/w3c/dom/svg/SVGPathSegArcAbs.h \
	org/w3c/dom/svg/SVGPathSegArcRel.h \
	org/w3c/dom/svg/SVGPathSegClosePath.h \
	org/w3c/dom/svg/SVGPathSegCurvetoCubicAbs.h \
	org/w3c/dom/svg/SVGPathSegCurvetoCubicRel.h \
	org/w3c/dom/svg/SVGPathSegCurvetoCubicSmoothAbs.h \
	org/w3c/dom/svg/SVGPathSegCurvetoCubicSmoothRel.h \
	org/w3c/dom/svg/SVGPathSegCurvetoQuadraticAbs.h \
	org/w3c/dom/svg/SVGPathSegCurvetoQuadraticRel.h \
	org/w3c/dom/svg/SVGPathSegCurvetoQuadraticSmoothAbs.h \
	org/w3c/dom/svg/SVGPathSegCurvetoQuadraticSmoothRel.h \
	org/w3c/dom/svg/SVGPathSeg.h \
	org/w3c/dom/svg/SVGPathSegLinetoAbs.h \
	org/w3c/dom/svg/SVGPathSegLinetoHorizontalAbs.h \
	org/w3c/dom/svg/SVGPathSegLinetoHorizontalRel.h \
	org/w3c/dom/svg/SVGPathSegLinetoRel.h \
	org/w3c/dom/svg/SVGPathSegLinetoVerticalAbs.h \
	org/w3c/dom/svg/SVGPathSegLinetoVerticalRel.h \
	org/w3c/dom/svg/SVGPathSegList.h \
	org/w3c/dom/svg/SVGPathSegMovetoAbs.h \
	org/w3c/dom/svg/SVGPathSegMovetoRel.h \
	org/w3c/dom/svg/SVGPatternElement.h \
	org/w3c/dom/svg/SVGPoint.h \
	org/w3c/dom/svg/SVGPointList.h \
	org/w3c/dom/svg/SVGPolygonElement.h \
	org/w3c/dom/svg/SVGPolylineElement.h \
	org/w3c/dom/svg/SVGPreserveAspectRatio.h \
	org/w3c/dom/svg/SVGRadialGradientElement.h \
	org/w3c/dom/svg/SVGRectElement.h \
	org/w3c/dom/svg/SVGRect.h \
	org/w3c/dom/svg/SVGRenderingIntent.h \
	org/w3c/dom/svg/SVGScriptElement.h \
	org/w3c/dom/svg/SVGSetElement.h \
	org/w3c/dom/svg/SVGStopElement.h \
	org/w3c/dom/svg/SVGStringList.h \
	org/w3c/dom/svg/SVGStylable.h \
	org/w3c/dom/svg/SVGStyleElement.h \
	org/w3c/dom/svg/SVGSVGElement.h \
	org/w3c/dom/svg/SVGSwitchElement.h \
	org/w3c/dom/svg/SVGSymbolElement.h \
	org/w3c/dom/svg/SVGTests.h \
	org/w3c/dom/svg/SVGTextContentElement.h \
	org/w3c/dom/svg/SVGTextElement.h \
	org/w3c/dom/svg/SVGTextPathElement.h \
	org/w3c/dom/svg/SVGTextPositioningElement.h \
	org/w3c/dom/svg/SVGTitleElement.h \
	org/w3c/dom/svg/SVGTransformable.h \
	org/w3c/dom/svg/SVGTransform.h \
	org/w3c/dom/svg/SVGTransformList.h \
	org/w3c/dom/svg/SVGTRefElement.h \
	org/w3c/dom/svg/SVGTSpanElement.h \
	org/w3c/dom/svg/SVGUnitTypes.h \
	org/w3c/dom/svg/SVGURIReference.h \
	org/w3c/dom/svg/SVGUseElement.h \
	org/w3c/dom/svg/SVGViewElement.h \
	org/w3c/dom/svg/SVGViewSpec.h \
	org/w3c/dom/svg/SVGVKernElement.h \
	org/w3c/dom/svg/SVGZoomAndPan.h \
	org/w3c/dom/svg/SVGZoomEvent.h \
	org/w3c/dom/Text.h \
	org/w3c/dom/traversal/DocumentTraversal.h \
	org/w3c/dom/traversal/ElementTraversal.h \
	org/w3c/dom/traversal/NodeFilter.h \
	org/w3c/dom/traversal/NodeIterator.h \
	org/w3c/dom/traversal/TreeWalker.h \
	org/w3c/dom/TypeInfo.h \
	org/w3c/dom/UserDataHandler.h \
	org/w3c/dom/validation/CharacterDataEditVAL.h \
	org/w3c/dom/validation/DocumentEditVAL.h \
	org/w3c/dom/validation/ElementEditVAL.h \
	org/w3c/dom/validation/ExceptionVAL.h \
	org/w3c/dom/validation/NodeEditVAL.h \
	org/w3c/dom/views/AbstractView.h \
	org/w3c/dom/views/ClientRect.h \
	org/w3c/dom/views/ClientRectList.h \
	org/w3c/dom/views/DocumentView.h \
	org/w3c/dom/webdatabase/DatabaseCallback.h \
	org/w3c/dom/webdatabase/Database.h \
	org/w3c/dom/webdatabase/DatabaseSync.h \
	org/w3c/dom/webdatabase/SQLError.h \
	org/w3c/dom/webdatabase/SQLException.h \
	org/w3c/dom/webdatabase/SQLResultSet.h \
	org/w3c/dom/webdatabase/SQLResultSetRowList.h \
	org/w3c/dom/webdatabase/SQLStatementCallback.h \
	org/w3c/dom/webdatabase/SQLStatementErrorCallback.h \
	org/w3c/dom/webdatabase/SQLTransactionCallback.h \
	org/w3c/dom/webdatabase/SQLTransactionErrorCallback.h \
	org/w3c/dom/webdatabase/SQLTransaction.h \
	org/w3c/dom/webdatabase/SQLTransactionSyncCallback.h \
	org/w3c/dom/webdatabase/SQLTransactionSync.h \
	org/w3c/dom/webdatabase/SQLVoidCallback.h \
	org/w3c/dom/webgl/WebGLActiveInfo.h \
	org/w3c/dom/webgl/WebGLArrayBuffer_Constructor.h \
	org/w3c/dom/webgl/WebGLArrayBuffer.h \
	org/w3c/dom/webgl/WebGLArray.h \
	org/w3c/dom/webgl/WebGLBuffer.h \
	org/w3c/dom/webgl/WebGLByteArray_Constructor.h \
	org/w3c/dom/webgl/WebGLByteArray.h \
	org/w3c/dom/webgl/WebGLContextAttributes.h \
	org/w3c/dom/webgl/WebGLContextLostEvent.h \
	org/w3c/dom/webgl/WebGLFloatArray_Constructor.h \
	org/w3c/dom/webgl/WebGLFloatArray.h \
	org/w3c/dom/webgl/WebGLFramebuffer.h \
	org/w3c/dom/webgl/WebGLIntArray_Constructor.h \
	org/w3c/dom/webgl/WebGLIntArray.h \
	org/w3c/dom/webgl/WebGLObjectArray.h \
	org/w3c/dom/webgl/WebGLObject.h \
	org/w3c/dom/webgl/WebGLProgram.h \
	org/w3c/dom/webgl/WebGLRenderbuffer.h \
	org/w3c/dom/webgl/WebGLRenderingContext.h \
	org/w3c/dom/webgl/WebGLShader.h \
	org/w3c/dom/webgl/WebGLShortArray_Constructor.h \
	org/w3c/dom/webgl/WebGLShortArray.h \
	org/w3c/dom/webgl/WebGLTexture.h \
	org/w3c/dom/webgl/WebGLUniformLocation.h \
	org/w3c/dom/webgl/WebGLUnsignedByteArray_Constructor.h \
	org/w3c/dom/webgl/WebGLUnsignedByteArray.h \
	org/w3c/dom/webgl/WebGLUnsignedIntArray_Constructor.h \
	org/w3c/dom/webgl/WebGLUnsignedIntArray.h \
	org/w3c/dom/webgl/WebGLUnsignedShortArray_Constructor.h \
	org/w3c/dom/webgl/WebGLUnsignedShortArray.h \
	org/w3c/dom/webnotifications/NotificationCenter.h \
	org/w3c/dom/webnotifications/Notification.h \
	org/w3c/dom/websocket/WebSocket_Constructor.h \
	org/w3c/dom/websocket/WebSocket.h \
	org/w3c/dom/webstorage/StorageEvent.h \
	org/w3c/dom/webstorage/Storage.h \
	org/w3c/dom/workers/AbstractWorker.h \
	org/w3c/dom/workers/ErrorEvent.h \
	org/w3c/dom/workers/SharedWorker_Constructor.h \
	org/w3c/dom/workers/SharedWorker.h \
	org/w3c/dom/workers/Worker_Constructor.h \
	org/w3c/dom/workers/WorkerGlobalScope.h \
	org/w3c/dom/workers/Worker.h \
	org/w3c/dom/workers/WorkerLocation.h \
	org/w3c/dom/workers/WorkerNavigator.h \
	org/w3c/dom/XMLHttpRequest_Constructor.h \
	org/w3c/dom/XMLHttpRequestEventTarget.h \
	org/w3c/dom/XMLHttpRequest.h \
	org/w3c/dom/XMLHttpRequestUpload.h \
	org/w3c/dom/xpath/XPathEvaluator.h \
	org/w3c/dom/xpath/XPathException.h \
	org/w3c/dom/xpath/XPathExpression.h \
	org/w3c/dom/xpath/XPathNamespace.h \
	org/w3c/dom/xpath/XPathNSResolver.h \
	org/w3c/dom/xpath/XPathResult.h

generated_sources = \
	com/getfirebug/Console.cpp \
	org/w3c/dom/AnonXMLHttpRequest_Constructor.cpp \
	org/w3c/dom/AnonXMLHttpRequest.cpp \
	org/w3c/dom/Attr.cpp \
	org/w3c/dom/CaretPosition.cpp \
	org/w3c/dom/CDATASection.cpp \
	org/w3c/dom/CharacterData.cpp \
	org/w3c/dom/Comment.cpp \
	org/w3c/dom/css/Counter.cpp \
	org/w3c/dom/css/CSS2Properties.cpp \
	org/w3c/dom/css/CSSCharsetRule.cpp \
	org/w3c/dom/css/CSSColorComponentValue.cpp \
	org/w3c/dom/css/CSSComponentValue.cpp \
	org/w3c/dom/css/CSSFontFaceRule.cpp \
	org/w3c/dom/css/CSSImportRule.cpp \
	org/w3c/dom/css/CSSLengthComponentValue.cpp \
	org/w3c/dom/css/CSSMapValue.cpp \
	org/w3c/dom/css/CSSMediaRule.cpp \
	org/w3c/dom/css/CSSNamespaceRule.cpp \
	org/w3c/dom/css/CSSPageRule.cpp \
	org/w3c/dom/css/CSSPercentageComponentValue.cpp \
	org/w3c/dom/css/CSSPrimitiveValue.cpp \
	org/w3c/dom/css/CSSPropertyValueList.cpp \
	org/w3c/dom/css/CSSRule.cpp \
	org/w3c/dom/css/CSSStyleDeclaration.cpp \
	org/w3c/dom/css/CSSStyleDeclarationValue.cpp \
	org/w3c/dom/css/CSSStyleRule.cpp \
	org/w3c/dom/css/CSSStyleSheet.cpp \
	org/w3c/dom/css/CSSUnknownRule.cpp \
	org/w3c/dom/css/CSSURLComponentValue.cpp \
	org/w3c/dom/css/CSSValue.cpp \
	org/w3c/dom/css/CSSValueList.cpp \
	org/w3c/dom/css/DocumentCSS.cpp \
	org/w3c/dom/css/DOMImplementationCSS.cpp \
	org/w3c/dom/css/ElementCSSInlineStyle.cpp \
	org/w3c/dom/css/Rect.cpp \
	org/w3c/dom/css/RGBColor.cpp \
	org/w3c/dom/css/ViewCSS.cpp \
	org/w3c/dom/Document.cpp \
	org/w3c/dom/DocumentFragment.cpp \
	org/w3c/dom/DocumentType.cpp \
	org/w3c/dom/DOMConfiguration.cpp \
	org/w3c/dom/DOMError.cpp \
	org/w3c/dom/DOMErrorHandler.cpp \
	org/w3c/dom/DOMImplementation.cpp \
	org/w3c/dom/DOMImplementationList.cpp \
	org/w3c/dom/DOMImplementationSource.cpp \
	org/w3c/dom/DOMLocator.cpp \
	org/w3c/dom/DOMStringList.cpp \
	org/w3c/dom/Element.cpp \
	org/w3c/dom/Entity.cpp \
	org/w3c/dom/EntityReference.cpp \
	org/w3c/dom/events/CompositionEvent.cpp \
	org/w3c/dom/events/CustomEvent.cpp \
	org/w3c/dom/events/DocumentEvent.cpp \
	org/w3c/dom/events/Event.cpp \
	org/w3c/dom/events/EventListener.cpp \
	org/w3c/dom/events/EventTarget.cpp \
	org/w3c/dom/events/FocusEvent.cpp \
	org/w3c/dom/events/KeyboardEvent.cpp \
	org/w3c/dom/events/MouseEvent.cpp \
	org/w3c/dom/events/MutationEvent.cpp \
	org/w3c/dom/events/MutationNameEvent.cpp \
	org/w3c/dom/eventsource/EventSource_Constructor.cpp \
	org/w3c/dom/eventsource/EventSource.cpp \
	org/w3c/dom/events/ProgressEvent.cpp \
	org/w3c/dom/events/TextEvent.cpp \
	org/w3c/dom/events/UIEvent.cpp \
	org/w3c/dom/events/WheelEvent.cpp \
	org/w3c/dom/file/Blob.cpp \
	org/w3c/dom/file/File.cpp \
	org/w3c/dom/file/FileError.cpp \
	org/w3c/dom/file/FileReader_Constructor.cpp \
	org/w3c/dom/file/FileReader.cpp \
	org/w3c/dom/file/FileReaderSync_Constructor.cpp \
	org/w3c/dom/file/FileReaderSync.cpp \
	org/w3c/dom/FormData_Constructor.cpp \
	org/w3c/dom/FormData.cpp \
	org/w3c/dom/geolocation/Coordinates.cpp \
	org/w3c/dom/geolocation/Geolocation.cpp \
	org/w3c/dom/geolocation/NavigatorGeolocation.cpp \
	org/w3c/dom/geolocation/PositionCallback.cpp \
	org/w3c/dom/geolocation/Position.cpp \
	org/w3c/dom/geolocation/PositionErrorCallback.cpp \
	org/w3c/dom/geolocation/PositionError.cpp \
	org/w3c/dom/geolocation/PositionOptions.cpp \
	org/w3c/dom/html/ApplicationCache.cpp \
	org/w3c/dom/html/BarProp.cpp \
	org/w3c/dom/html/BeforeUnloadEvent.cpp \
	org/w3c/dom/html/BooleanCallback.cpp \
	org/w3c/dom/html/CanvasGradient.cpp \
	org/w3c/dom/html/CanvasPattern.cpp \
	org/w3c/dom/html/CanvasPixelArray.cpp \
	org/w3c/dom/html/CanvasRenderingContext2D.cpp \
	org/w3c/dom/html/DataTransfer.cpp \
	org/w3c/dom/html/DOMSettableTokenList.cpp \
	org/w3c/dom/html/DOMStringMap.cpp \
	org/w3c/dom/html/DOMTokenList.cpp \
	org/w3c/dom/html/DragEvent.cpp \
	org/w3c/dom/html/Function.cpp \
	org/w3c/dom/html/HashChangeEvent.cpp \
	org/w3c/dom/html/History.cpp \
	org/w3c/dom/html/HTMLAllCollection.cpp \
	org/w3c/dom/html/HTMLAnchorElement.cpp \
	org/w3c/dom/html/HTMLAppletElement.cpp \
	org/w3c/dom/html/HTMLAreaElement.cpp \
	org/w3c/dom/html/HTMLAudioElement_Constructor.cpp \
	org/w3c/dom/html/HTMLAudioElement.cpp \
	org/w3c/dom/html/HTMLBaseElement.cpp \
	org/w3c/dom/html/HTMLBaseFontElement.cpp \
	org/w3c/dom/html/HTMLBodyElement.cpp \
	org/w3c/dom/html/HTMLBRElement.cpp \
	org/w3c/dom/html/HTMLButtonElement.cpp \
	org/w3c/dom/html/HTMLCanvasElement.cpp \
	org/w3c/dom/html/HTMLCollection.cpp \
	org/w3c/dom/html/HTMLCommandElement.cpp \
	org/w3c/dom/html/HTMLDataListElement.cpp \
	org/w3c/dom/html/HTMLDetailsElement.cpp \
	org/w3c/dom/html/HTMLDirectoryElement.cpp \
	org/w3c/dom/html/HTMLDivElement.cpp \
	org/w3c/dom/html/HTMLDListElement.cpp \
	org/w3c/dom/html/HTMLDocument.cpp \
	org/w3c/dom/html/HTMLElement.cpp \
	org/w3c/dom/html/HTMLEmbedElement.cpp \
	org/w3c/dom/html/HTMLFieldSetElement.cpp \
	org/w3c/dom/html/HTMLFontElement.cpp \
	org/w3c/dom/html/HTMLFormControlsCollection.cpp \
	org/w3c/dom/html/HTMLFormElement.cpp \
	org/w3c/dom/html/HTMLFrameElement.cpp \
	org/w3c/dom/html/HTMLFrameSetElement.cpp \
	org/w3c/dom/html/HTMLHeadElement.cpp \
	org/w3c/dom/html/HTMLHeadingElement.cpp \
	org/w3c/dom/html/HTMLHRElement.cpp \
	org/w3c/dom/html/HTMLHtmlElement.cpp \
	org/w3c/dom/html/HTMLIFrameElement.cpp \
	org/w3c/dom/html/HTMLImageElement_Constructor.cpp \
	org/w3c/dom/html/HTMLImageElement.cpp \
	org/w3c/dom/html/HTMLInputElement.cpp \
	org/w3c/dom/html/HTMLKeygenElement.cpp \
	org/w3c/dom/html/HTMLLabelElement.cpp \
	org/w3c/dom/html/HTMLLegendElement.cpp \
	org/w3c/dom/html/HTMLLIElement.cpp \
	org/w3c/dom/html/HTMLLinkElement.cpp \
	org/w3c/dom/html/HTMLMapElement.cpp \
	org/w3c/dom/html/HTMLMarqueeElement.cpp \
	org/w3c/dom/html/HTMLMediaElement.cpp \
	org/w3c/dom/html/HTMLMenuElement.cpp \
	org/w3c/dom/html/HTMLMetaElement.cpp \
	org/w3c/dom/html/HTMLMeterElement.cpp \
	org/w3c/dom/html/HTMLModElement.cpp \
	org/w3c/dom/html/HTMLObjectElement.cpp \
	org/w3c/dom/html/HTMLOListElement.cpp \
	org/w3c/dom/html/HTMLOptGroupElement.cpp \
	org/w3c/dom/html/HTMLOptionElement_Constructor.cpp \
	org/w3c/dom/html/HTMLOptionElement.cpp \
	org/w3c/dom/html/HTMLOptionsCollection.cpp \
	org/w3c/dom/html/HTMLOutputElement.cpp \
	org/w3c/dom/html/HTMLParagraphElement.cpp \
	org/w3c/dom/html/HTMLParamElement.cpp \
	org/w3c/dom/html/HTMLPreElement.cpp \
	org/w3c/dom/html/HTMLProgressElement.cpp \
	org/w3c/dom/html/HTMLPropertiesCollection.cpp \
	org/w3c/dom/html/HTMLQuoteElement.cpp \
	org/w3c/dom/html/HTMLScriptElement.cpp \
	org/w3c/dom/html/HTMLSelectElement.cpp \
	org/w3c/dom/html/HTMLSourceElement.cpp \
	org/w3c/dom/html/HTMLSpanElement.cpp \
	org/w3c/dom/html/HTMLStyleElement.cpp \
	org/w3c/dom/html/HTMLTableCaptionElement.cpp \
	org/w3c/dom/html/HTMLTableCellElement.cpp \
	org/w3c/dom/html/HTMLTableColElement.cpp \
	org/w3c/dom/html/HTMLTableDataCellElement.cpp \
	org/w3c/dom/html/HTMLTableElement.cpp \
	org/w3c/dom/html/HTMLTableHeaderCellElement.cpp \
	org/w3c/dom/html/HTMLTableRowElement.cpp \
	org/w3c/dom/html/HTMLTableSectionElement.cpp \
	org/w3c/dom/html/HTMLTextAreaElement.cpp \
	org/w3c/dom/html/HTMLTimeElement.cpp \
	org/w3c/dom/html/HTMLTitleElement.cpp \
	org/w3c/dom/html/HTMLUListElement.cpp \
	org/w3c/dom/html/HTMLUnknownElement.cpp \
	org/w3c/dom/html/HTMLVideoElement.cpp \
	org/w3c/dom/html/ImageData.cpp \
	org/w3c/dom/html/Location.cpp \
	org/w3c/dom/html/MediaError.cpp \
	org/w3c/dom/html/MessageChannel_Constructor.cpp \
	org/w3c/dom/html/MessageChannel.cpp \
	org/w3c/dom/html/MessageEvent.cpp \
	org/w3c/dom/html/MessagePort.cpp \
	org/w3c/dom/html/Navigator.cpp \
	org/w3c/dom/html/PageTransitionEvent.cpp \
	org/w3c/dom/html/PopStateEvent.cpp \
	org/w3c/dom/html/PropertyNodeList.cpp \
	org/w3c/dom/html/RadioNodeList.cpp \
	org/w3c/dom/html/Screen.cpp \
	org/w3c/dom/html/Selection.cpp \
	org/w3c/dom/html/StyleMedia.cpp \
	org/w3c/dom/html/TextMetrics.cpp \
	org/w3c/dom/html/TimeRanges.cpp \
	org/w3c/dom/html/UndoManager.cpp \
	org/w3c/dom/html/UndoManagerEvent.cpp \
	org/w3c/dom/html/ValidityState.cpp \
	org/w3c/dom/html/Window.cpp \
	org/w3c/dom/indexeddb/IDBCursor.cpp \
	org/w3c/dom/indexeddb/IDBCursorSync.cpp \
	org/w3c/dom/indexeddb/IDBDatabase.cpp \
	org/w3c/dom/indexeddb/IDBDatabaseSync.cpp \
	org/w3c/dom/indexeddb/IDBEnvironment.cpp \
	org/w3c/dom/indexeddb/IDBEnvironmentSync.cpp \
	org/w3c/dom/indexeddb/IDBErrorEvent.cpp \
	org/w3c/dom/indexeddb/IDBEvent.cpp \
	org/w3c/dom/indexeddb/IDBFactory.cpp \
	org/w3c/dom/indexeddb/IDBFactorySync.cpp \
	org/w3c/dom/indexeddb/IDBIndex.cpp \
	org/w3c/dom/indexeddb/IDBIndexSync.cpp \
	org/w3c/dom/indexeddb/IDBKeyRange.cpp \
	org/w3c/dom/indexeddb/IDBKeyRangeConstructors.cpp \
	org/w3c/dom/indexeddb/IDBObjectStore.cpp \
	org/w3c/dom/indexeddb/IDBObjectStoreSync.cpp \
	org/w3c/dom/indexeddb/IDBRequest.cpp \
	org/w3c/dom/indexeddb/IDBSuccessEvent.cpp \
	org/w3c/dom/indexeddb/IDBTransaction.cpp \
	org/w3c/dom/indexeddb/IDBTransactionEvent.cpp \
	org/w3c/dom/indexeddb/IDBTransactionSync.cpp \
	org/w3c/dom/indexeddb/IDBVersionChangeEvent.cpp \
	org/w3c/dom/indexeddb/IDBVersionChangeRequest.cpp \
	org/w3c/dom/ls/DOMImplementationLS.cpp \
	org/w3c/dom/ls/LSInput.cpp \
	org/w3c/dom/ls/LSLoadEvent.cpp \
	org/w3c/dom/ls/LSOutput.cpp \
	org/w3c/dom/ls/LSParser.cpp \
	org/w3c/dom/ls/LSParserFilter.cpp \
	org/w3c/dom/ls/LSProgressEvent.cpp \
	org/w3c/dom/ls/LSResourceResolver.cpp \
	org/w3c/dom/ls/LSSerializer.cpp \
	org/w3c/dom/ls/LSSerializerFilter.cpp \
	org/w3c/dom/NamedNodeMap.cpp \
	org/w3c/dom/NameList.cpp \
	org/w3c/dom/Node.cpp \
	org/w3c/dom/NodeList.cpp \
	org/w3c/dom/Notation.cpp \
	org/w3c/dom/ProcessingInstruction.cpp \
	org/w3c/dom/ranges/DocumentRange.cpp \
	org/w3c/dom/ranges/Range.cpp \
	org/w3c/dom/smil/ElementTimeControl.cpp \
	org/w3c/dom/smil/TimeEvent.cpp \
	org/w3c/dom/stylesheets/LinkStyle.cpp \
	org/w3c/dom/stylesheets/MediaList.cpp \
	org/w3c/dom/stylesheets/StyleSheet.cpp \
	org/w3c/dom/svg/GetSVGDocument.cpp \
	org/w3c/dom/svg/SVGAElement.cpp \
	org/w3c/dom/svg/SVGAltGlyphDefElement.cpp \
	org/w3c/dom/svg/SVGAltGlyphElement.cpp \
	org/w3c/dom/svg/SVGAltGlyphItemElement.cpp \
	org/w3c/dom/svg/SVGAngle.cpp \
	org/w3c/dom/svg/SVGAnimateColorElement.cpp \
	org/w3c/dom/svg/SVGAnimatedAngle.cpp \
	org/w3c/dom/svg/SVGAnimatedBoolean.cpp \
	org/w3c/dom/svg/SVGAnimatedEnumeration.cpp \
	org/w3c/dom/svg/SVGAnimatedInteger.cpp \
	org/w3c/dom/svg/SVGAnimatedLength.cpp \
	org/w3c/dom/svg/SVGAnimatedLengthList.cpp \
	org/w3c/dom/svg/SVGAnimatedNumber.cpp \
	org/w3c/dom/svg/SVGAnimatedNumberList.cpp \
	org/w3c/dom/svg/SVGAnimatedPathData.cpp \
	org/w3c/dom/svg/SVGAnimatedPoints.cpp \
	org/w3c/dom/svg/SVGAnimatedPreserveAspectRatio.cpp \
	org/w3c/dom/svg/SVGAnimatedRect.cpp \
	org/w3c/dom/svg/SVGAnimatedString.cpp \
	org/w3c/dom/svg/SVGAnimatedTransformList.cpp \
	org/w3c/dom/svg/SVGAnimateElement.cpp \
	org/w3c/dom/svg/SVGAnimateMotionElement.cpp \
	org/w3c/dom/svg/SVGAnimateTransformElement.cpp \
	org/w3c/dom/svg/SVGAnimationElement.cpp \
	org/w3c/dom/svg/SVGCircleElement.cpp \
	org/w3c/dom/svg/SVGClipPathElement.cpp \
	org/w3c/dom/svg/SVGColor.cpp \
	org/w3c/dom/svg/SVGColorProfileElement.cpp \
	org/w3c/dom/svg/SVGColorProfileRule.cpp \
	org/w3c/dom/svg/SVGComponentTransferFunctionElement.cpp \
	org/w3c/dom/svg/SVGCSSRule.cpp \
	org/w3c/dom/svg/SVGCursorElement.cpp \
	org/w3c/dom/svg/SVGDefinitionSrcElement.cpp \
	org/w3c/dom/svg/SVGDefsElement.cpp \
	org/w3c/dom/svg/SVGDescElement.cpp \
	org/w3c/dom/svg/SVGDocument.cpp \
	org/w3c/dom/svg/SVGElement.cpp \
	org/w3c/dom/svg/SVGElementInstance.cpp \
	org/w3c/dom/svg/SVGElementInstanceList.cpp \
	org/w3c/dom/svg/SVGEllipseElement.cpp \
	org/w3c/dom/svg/SVGEvent.cpp \
	org/w3c/dom/svg/SVGExternalResourcesRequired.cpp \
	org/w3c/dom/svg/SVGFEBlendElement.cpp \
	org/w3c/dom/svg/SVGFEColorMatrixElement.cpp \
	org/w3c/dom/svg/SVGFEComponentTransferElement.cpp \
	org/w3c/dom/svg/SVGFECompositeElement.cpp \
	org/w3c/dom/svg/SVGFEConvolveMatrixElement.cpp \
	org/w3c/dom/svg/SVGFEDiffuseLightingElement.cpp \
	org/w3c/dom/svg/SVGFEDisplacementMapElement.cpp \
	org/w3c/dom/svg/SVGFEDistantLightElement.cpp \
	org/w3c/dom/svg/SVGFEFloodElement.cpp \
	org/w3c/dom/svg/SVGFEFuncAElement.cpp \
	org/w3c/dom/svg/SVGFEFuncBElement.cpp \
	org/w3c/dom/svg/SVGFEFuncGElement.cpp \
	org/w3c/dom/svg/SVGFEFuncRElement.cpp \
	org/w3c/dom/svg/SVGFEGaussianBlurElement.cpp \
	org/w3c/dom/svg/SVGFEImageElement.cpp \
	org/w3c/dom/svg/SVGFEMergeElement.cpp \
	org/w3c/dom/svg/SVGFEMergeNodeElement.cpp \
	org/w3c/dom/svg/SVGFEMorphologyElement.cpp \
	org/w3c/dom/svg/SVGFEOffsetElement.cpp \
	org/w3c/dom/svg/SVGFEPointLightElement.cpp \
	org/w3c/dom/svg/SVGFESpecularLightingElement.cpp \
	org/w3c/dom/svg/SVGFESpotLightElement.cpp \
	org/w3c/dom/svg/SVGFETileElement.cpp \
	org/w3c/dom/svg/SVGFETurbulenceElement.cpp \
	org/w3c/dom/svg/SVGFilterElement.cpp \
	org/w3c/dom/svg/SVGFilterPrimitiveStandardAttributes.cpp \
	org/w3c/dom/svg/SVGFitToViewBox.cpp \
	org/w3c/dom/svg/SVGFontElement.cpp \
	org/w3c/dom/svg/SVGFontFaceElement.cpp \
	org/w3c/dom/svg/SVGFontFaceFormatElement.cpp \
	org/w3c/dom/svg/SVGFontFaceNameElement.cpp \
	org/w3c/dom/svg/SVGFontFaceSrcElement.cpp \
	org/w3c/dom/svg/SVGFontFaceUriElement.cpp \
	org/w3c/dom/svg/SVGForeignObjectElement.cpp \
	org/w3c/dom/svg/SVGGElement.cpp \
	org/w3c/dom/svg/SVGGlyphElement.cpp \
	org/w3c/dom/svg/SVGGlyphRefElement.cpp \
	org/w3c/dom/svg/SVGGradientElement.cpp \
	org/w3c/dom/svg/SVGHKernElement.cpp \
	org/w3c/dom/svg/SVGICCColor.cpp \
	org/w3c/dom/svg/SVGImageElement.cpp \
	org/w3c/dom/svg/SVGLangSpace.cpp \
	org/w3c/dom/svg/SVGLength.cpp \
	org/w3c/dom/svg/SVGLengthList.cpp \
	org/w3c/dom/svg/SVGLinearGradientElement.cpp \
	org/w3c/dom/svg/SVGLineElement.cpp \
	org/w3c/dom/svg/SVGLocatable.cpp \
	org/w3c/dom/svg/SVGMarkerElement.cpp \
	org/w3c/dom/svg/SVGMaskElement.cpp \
	org/w3c/dom/svg/SVGMatrix.cpp \
	org/w3c/dom/svg/SVGMetadataElement.cpp \
	org/w3c/dom/svg/SVGMissingGlyphElement.cpp \
	org/w3c/dom/svg/SVGMPathElement.cpp \
	org/w3c/dom/svg/SVGNumber.cpp \
	org/w3c/dom/svg/SVGNumberList.cpp \
	org/w3c/dom/svg/SVGPaint.cpp \
	org/w3c/dom/svg/SVGPathElement.cpp \
	org/w3c/dom/svg/SVGPathSegArcAbs.cpp \
	org/w3c/dom/svg/SVGPathSegArcRel.cpp \
	org/w3c/dom/svg/SVGPathSegClosePath.cpp \
	org/w3c/dom/svg/SVGPathSeg.cpp \
	org/w3c/dom/svg/SVGPathSegCurvetoCubicAbs.cpp \
	org/w3c/dom/svg/SVGPathSegCurvetoCubicRel.cpp \
	org/w3c/dom/svg/SVGPathSegCurvetoCubicSmoothAbs.cpp \
	org/w3c/dom/svg/SVGPathSegCurvetoCubicSmoothRel.cpp \
	org/w3c/dom/svg/SVGPathSegCurvetoQuadraticAbs.cpp \
	org/w3c/dom/svg/SVGPathSegCurvetoQuadraticRel.cpp \
	org/w3c/dom/svg/SVGPathSegCurvetoQuadraticSmoothAbs.cpp \
	org/w3c/dom/svg/SVGPathSegCurvetoQuadraticSmoothRel.cpp \
	org/w3c/dom/svg/SVGPathSegLinetoAbs.cpp \
	org/w3c/dom/svg/SVGPathSegLinetoHorizontalAbs.cpp \
	org/w3c/dom/svg/SVGPathSegLinetoHorizontalRel.cpp \
	org/w3c/dom/svg/SVGPathSegLinetoRel.cpp \
	org/w3c/dom/svg/SVGPathSegLinetoVerticalAbs.cpp \
	org/w3c/dom/svg/SVGPathSegLinetoVerticalRel.cpp \
	org/w3c/dom/svg/SVGPathSegList.cpp \
	org/w3c/dom/svg/SVGPathSegMovetoAbs.cpp \
	org/w3c/dom/svg/SVGPathSegMovetoRel.cpp \
	org/w3c/dom/svg/SVGPatternElement.cpp \
	org/w3c/dom/svg/SVGPoint.cpp \
	org/w3c/dom/svg/SVGPointList.cpp \
	org/w3c/dom/svg/SVGPolygonElement.cpp \
	org/w3c/dom/svg/SVGPolylineElement.cpp \
	org/w3c/dom/svg/SVGPreserveAspectRatio.cpp \
	org/w3c/dom/svg/SVGRadialGradientElement.cpp \
	org/w3c/dom/svg/SVGRect.cpp \
	org/w3c/dom/svg/SVGRectElement.cpp \
	org/w3c/dom/svg/SVGRenderingIntent.cpp \
	org/w3c/dom/svg/SVGScriptElement.cpp \
	org/w3c/dom/svg/SVGSetElement.cpp \
	org/w3c/dom/svg/SVGStopElement.cpp \
	org/w3c/dom/svg/SVGStringList.cpp \
	org/w3c/dom/svg/SVGStylable.cpp \
	org/w3c/dom/svg/SVGStyleElement.cpp \
	org/w3c/dom/svg/SVGSVGElement.cpp \
	org/w3c/dom/svg/SVGSwitchElement.cpp \
	org/w3c/dom/svg/SVGSymbolElement.cpp \
	org/w3c/dom/svg/SVGTests.cpp \
	org/w3c/dom/svg/SVGTextContentElement.cpp \
	org/w3c/dom/svg/SVGTextElement.cpp \
	org/w3c/dom/svg/SVGTextPathElement.cpp \
	org/w3c/dom/svg/SVGTextPositioningElement.cpp \
	org/w3c/dom/svg/SVGTitleElement.cpp \
	org/w3c/dom/svg/SVGTransformable.cpp \
	org/w3c/dom/svg/SVGTransform.cpp \
	org/w3c/dom/svg/SVGTransformList.cpp \
	org/w3c/dom/svg/SVGTRefElement.cpp \
	org/w3c/dom/svg/SVGTSpanElement.cpp \
	org/w3c/dom/svg/SVGUnitTypes.cpp \
	org/w3c/dom/svg/SVGURIReference.cpp \
	org/w3c/dom/svg/SVGUseElement.cpp \
	org/w3c/dom/svg/SVGViewElement.cpp \
	org/w3c/dom/svg/SVGViewSpec.cpp \
	org/w3c/dom/svg/SVGVKernElement.cpp \
	org/w3c/dom/svg/SVGZoomAndPan.cpp \
	org/w3c/dom/svg/SVGZoomEvent.cpp \
	org/w3c/dom/Text.cpp \
	org/w3c/dom/traversal/DocumentTraversal.cpp \
	org/w3c/dom/traversal/ElementTraversal.cpp \
	org/w3c/dom/traversal/NodeFilter.cpp \
	org/w3c/dom/traversal/NodeIterator.cpp \
	org/w3c/dom/traversal/TreeWalker.cpp \
	org/w3c/dom/TypeInfo.cpp \
	org/w3c/dom/UserDataHandler.cpp \
	org/w3c/dom/validation/CharacterDataEditVAL.cpp \
	org/w3c/dom/validation/DocumentEditVAL.cpp \
	org/w3c/dom/validation/ElementEditVAL.cpp \
	org/w3c/dom/validation/NodeEditVAL.cpp \
	org/w3c/dom/views/AbstractView.cpp \
	org/w3c/dom/views/ClientRect.cpp \
	org/w3c/dom/views/ClientRectList.cpp \
	org/w3c/dom/views/DocumentView.cpp \
	org/w3c/dom/webdatabase/DatabaseCallback.cpp \
	org/w3c/dom/webdatabase/Database.cpp \
	org/w3c/dom/webdatabase/DatabaseSync.cpp \
	org/w3c/dom/webdatabase/SQLError.cpp \
	org/w3c/dom/webdatabase/SQLResultSet.cpp \
	org/w3c/dom/webdatabase/SQLResultSetRowList.cpp \
	org/w3c/dom/webdatabase/SQLStatementCallback.cpp \
	org/w3c/dom/webdatabase/SQLStatementErrorCallback.cpp \
	org/w3c/dom/webdatabase/SQLTransactionCallback.cpp \
	org/w3c/dom/webdatabase/SQLTransaction.cpp \
	org/w3c/dom/webdatabase/SQLTransactionErrorCallback.cpp \
	org/w3c/dom/webdatabase/SQLTransactionSyncCallback.cpp \
	org/w3c/dom/webdatabase/SQLTransactionSync.cpp \
	org/w3c/dom/webdatabase/SQLVoidCallback.cpp \
	org/w3c/dom/webgl/WebGLActiveInfo.cpp \
	org/w3c/dom/webgl/WebGLArrayBuffer_Constructor.cpp \
	org/w3c/dom/webgl/WebGLArrayBuffer.cpp \
	org/w3c/dom/webgl/WebGLArray.cpp \
	org/w3c/dom/webgl/WebGLBuffer.cpp \
	org/w3c/dom/webgl/WebGLByteArray_Constructor.cpp \
	org/w3c/dom/webgl/WebGLByteArray.cpp \
	org/w3c/dom/webgl/WebGLContextAttributes.cpp \
	org/w3c/dom/webgl/WebGLContextLostEvent.cpp \
	org/w3c/dom/webgl/WebGLFloatArray_Constructor.cpp \
	org/w3c/dom/webgl/WebGLFloatArray.cpp \
	org/w3c/dom/webgl/WebGLFramebuffer.cpp \
	org/w3c/dom/webgl/WebGLIntArray_Constructor.cpp \
	org/w3c/dom/webgl/WebGLIntArray.cpp \
	org/w3c/dom/webgl/WebGLObjectArray.cpp \
	org/w3c/dom/webgl/WebGLObject.cpp \
	org/w3c/dom/webgl/WebGLProgram.cpp \
	org/w3c/dom/webgl/WebGLRenderbuffer.cpp \
	org/w3c/dom/webgl/WebGLRenderingContext.cpp \
	org/w3c/dom/webgl/WebGLShader.cpp \
	org/w3c/dom/webgl/WebGLShortArray_Constructor.cpp \
	org/w3c/dom/webgl/WebGLShortArray.cpp \
	org/w3c/dom/webgl/WebGLTexture.cpp \
	org/w3c/dom/webgl/WebGLUniformLocation.cpp \
	org/w3c/dom/webgl/WebGLUnsignedByteArray_Constructor.cpp \
	org/w3c/dom/webgl/WebGLUnsignedByteArray.cpp \
	org/w3c/dom/webgl/WebGLUnsignedIntArray_Constructor.cpp \
	org/w3c/dom/webgl/WebGLUnsignedIntArray.cpp \
	org/w3c/dom/webgl/WebGLUnsignedShortArray_Constructor.cpp \
	org/w3c/dom/webgl/WebGLUnsignedShortArray.cpp \
	org/w3c/dom/webnotifications/NotificationCenter.cpp \
	org/w3c/dom/webnotifications/Notification.cpp \
	org/w3c/dom/websocket/WebSocket_Constructor.cpp \
	org/w3c/dom/websocket/WebSocket.cpp \
	org/w3c/dom/webstorage/Storage.cpp \
	org/w3c/dom/webstorage/StorageEvent.cpp \
	org/w3c/dom/workers/AbstractWorker.cpp \
	org/w3c/dom/workers/ErrorEvent.cpp \
	org/w3c/dom/workers/SharedWorker_Constructor.cpp \
	org/w3c/dom/workers/SharedWorker.cpp \
	org/w3c/dom/workers/Worker_Constructor.cpp \
	org/w3c/dom/workers/Worker.cpp \
	org/w3c/dom/workers/WorkerGlobalScope.cpp \
	org/w3c/dom/workers/WorkerLocation.cpp \
	org/w3c/dom/workers/WorkerNavigator.cpp \
	org/w3c/dom/XMLHttpRequest_Constructor.cpp \
	org/w3c/dom/XMLHttpRequest.cpp \
	org/w3c/dom/XMLHttpRequestEventTarget.cpp \
	org/w3c/dom/XMLHttpRequestUpload.cpp \
	org/w3c/dom/xpath/XPathEvaluator.cpp \
	org/w3c/dom/xpath/XPathExpression.cpp \
	org/w3c/dom/xpath/XPathNamespace.cpp \
	org/w3c/dom/xpath/XPathNSResolver.cpp \
	org/w3c/dom/xpath/XPathResult.cpp

BUILT_SOURCES = $(generated_sources) $(generated_headers)

nobase_nodist_include_HEADERS = $(generated_headers)

$(generated_headers) : org/w3c/dom/Node.h

org/w3c/dom/Node.h : $(idl_files)
	$(esidl) -cplusplus -string std::string -object Object -fvirtualbase $^

lib_LIBRARIES = libesnpapi.a

AM_CPPFLAGS = \
	-fshort-wchar -std=gnu++0x -Wall \
	-I include \
	-I $(srcdir)/include \
	-I $(srcdir)/../include \
	-I $(srcdir)/../cplusplus \
	-DXP_UNIX -DHAVE_CONFIG_H \
	-fno-implicit-inline-templates -fno-default-inline

if !NACL
AM_CPPFLAGS += -fPIC
endif

org/w3c/dom/Node.cpp : $(idl_files) 
	$(esidl) -cplusplus-src -string std::string -object Object -fvirtualbase $^

$(generated_sources) : org/w3c/dom/Node.cpp

nodist_libesnpapi_a_SOURCES = $(generated_sources) $(generated_headers)

libesnpapi_a_SOURCES = \
	include/esnpapi.h \
	include/object.h \
	include/proxyImpl.h \
	include/npapi/npapi.h \
	include/npapi/npruntime.h \
	include/npapi/nptypes.h \
	include/npapi/npupp.h \
	src/bridge.cpp \
	src/invoke.cpp \
	src/proxy.cpp \
	src/stub.cpp \
	src/metadata.cpp \
	src/metadataFile.cpp \
	src/metadataGeolocation.cpp \
	src/metadataHtml.cpp \
	src/metadataHtmlA_G.cpp \
	src/metadataHtmlH_N.cpp \
	src/metadataHtmlO_U.cpp \
	src/metadataHtmlV_Z.cpp \
	src/metadataSvg.cpp \
	src/metadataSvgA_E.cpp \
	src/metadataSvgF_G.cpp \
	src/metadataSvgH_N.cpp \
	src/metadataSvgO_U.cpp \
	src/metadataSvgV_Z.cpp \
	src/metadataWebDatabase.cpp \
	src/metadataWebGL.cpp \
	src/metadataWorkers.cpp

clean-local:
	rm -rf org com *.h

EXTRA_DIST = config.h
